test/sematest/invalid/use_of_main_method_parameter4.java
class A {
  public static void main(String[] n) {
    n.length;
  }
}